GearsetPOC/force-app/main/default/objects/Invoice_Customer__c/Invoice_Customer__c.object-meta.xml
<CustomObject>
    <description>For Invoice request</description>
    <label>Invoice_Customer</label>
    <nameField>
        <displayFormat>CId-{000000}</displayFormat>
        <label>Customer_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice_Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>