GearsetPOC/force-app/main/default/objects/Invoice_Customer__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <label>Customer_Address</label>
    <type>TextArea</type>
</CustomField>