GearsetPOC/force-app/main/default/objects/Invoice_Customer__c/fields/Customer_ContactName__c.field-meta.xml
<CustomField>
    <fullName>Customer_ContactName__c</fullName>
    <label>Customer_ContactName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>