GearsetPOC/force-app/main/default/objects/Invoice_Customer__c/fields/Customer_ContactPhno__c.field-meta.xml
<CustomField>
    <fullName>Customer_ContactPhno__c</fullName>
    <label>Customer_ContactPhno</label>
    <length>50</length>
    <type>Text</type>
</CustomField>