GearsetPOC/force-app/main/default/objects/Invoice_Customer__c/fields/Customer_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>Customer_PaymentTerms__c</fullName>
    <label>Customer_PaymentTerms</label>
    <length>30</length>
    <type>Text</type>
</CustomField>