GearsetPOC/force-app/main/default/objects/Invoice_Customer__c/fields/Customer_VatRegNo__c.field-meta.xml
<CustomField>
    <fullName>Customer_VatRegNo__c</fullName>
    <label>Customer_VatRegNo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>